--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.5",
-    "react-toastify": "^11.0.5",
-    "sass": "^1.93.3"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -30,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "sass": "^1.93.3",
     "tailwindcss": "^4.1.16",
     "vite": "^7.1.7"
   }
